data/derived/comb/progs/unify/prog1155.ml.out
Characters 84-98:
  | hd::tl -> f (f hd hd) tl
              ^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
